2010-08-19  Sebastian P. Luque <spluque@gmail.com>

	* inst/ALA.R, man/cd4.Rd, man/fat.Rd:
	  New examples.

2010-08-17  Sebastian P. Luque <spluque@gmail.com>

	* inst/ALA.R, man/fev1.Rd:
	  "%" needs escaping in *.Rd files.

	* DESCRIPTION, inst/ALA.R, man/fev1.Rd:
	  Revert to suggesting lme4 and condition examples on any required
	  packages.

	* inst/ALA.R, man/fev1.Rd:
	  Updated example.

	* DESCRIPTION, inst/ALA.R, man/fev1.Rd:
	  Package depends on lme4 now. Added first example.

2010-08-16  Sebastian P. Luque <spluque@gmail.com>

	* data/cholesterol.rda, inst/ALA.R, man/cholesterol.Rd:
	  Shorten level for factor 'treatment'.

	* inst/ALA.R:
	  Updated work-flow.

	* data/tumor.rda:
	  Actually changed binary response to factor.

	* data/ccs.rda, data/ecg.rda, man/ccs.Rd, man/ecg.Rd:
	  Properly expanded (see inst/ALA.R).

	* man/amenorrhea.Rd, man/bpd.Rd, man/ccs.Rd, man/cd4.Rd,
	  man/chd.Rd, man/cholesterol.Rd, man/ecg.Rd, man/epilepsy.Rd,
	  man/exercise.Rd, man/fat.Rd, man/fev1.Rd, man/headache.Rd,
	  man/lead.Rd, man/leprosy.Rd, man/muscatine.Rd, man/ntp.Rd,
	  man/rat.Rd, man/respir.Rd, man/skin.Rd, man/smoking.Rd,
	  man/tlc.Rd, man/toenail.Rd, man/tumor.Rd, man/tvsfp.Rd:
	  Removed data() calls and added summary().

	* inst, inst/ALA.R, inst/read_data.awk, inst/write_data.sh:
	  Adding package development scripts.

	* data/amenorrhea.rda, data/bpd.rda, data/ccs.rda, data/ecg.rda,
	  data/muscatine.rda, data/ntp.rda, data/respir.rda,
	  man/amenorrhea.Rd, man/bpd.Rd, man/ccs.Rd, man/ecg.Rd,
	  man/muscatine.Rd, man/ntp.Rd, man/respir.Rd, man/tumor.Rd:
	  Turned binary responses into factors with appropriate levels.

	* man/respir.Rd:
	  Warning about discrepancy in IDs.

	* DESCRIPTION:
	  LazyData the package.

2010-08-15  Sebastian P. Luque <spluque@gmail.com>

	* man/bpd.Rd, man/ecg.Rd, man/rat.Rd:
	  Minor documentation corrections.

	* man/tvsfp.Rd:
	  Clarify adding of 'id' column.

2010-08-14  Sebastian P. Luque <spluque@gmail.com>
