@@ -1,3 +1,8 @@
+2010-08-20  Sebastian P. Luque <spluque@gmail.com>
+
+	* inst/ALA.R, man/exercise.Rd, man/fat.Rd:
+	  Updated examples.
+
 2010-08-19  Sebastian P. Luque <spluque@gmail.com>
 
 	* inst/ALA.R, man/cd4.Rd, man/fat.Rd:
